--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>ISMRM LatAm</title>
-</head>
-<body>
-  <h1>Welcome to ISMRM Latam!</h1>
-  <p>This site is hosted at https://ismrm-latam.github.io/</p>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <title>ISMRM-LATAM</title>
+  </head>
+  <body>
+    <h1>¡Bienvenidos al Repositorio del Capítulo Latinoamericano de la ISMRM (ISMRM-LATAM)!</h1>
+
+    <p>
+      Hemos dado de alta este repositorio con el fin de compilar todos los proyectos y repositorios disponibles por nuestros miembros y con una breve descripción en español.
+    </p>
+
+    <p>
+      ¿Quieres incluir tu repositorio? Contáctanos
+      <a href="mailto:ismrm.latino@gmail.com">ismrm.latino@gmail.com</a>
+    </p>
+  </body>
 </html>
