--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>ISMRM-LATAM</title>
   </head>
   <body>
+    <!-- Imagen en la parte superior -->
+    <p>
+      <img
+        src="Logo_ismrm.webp"
+        alt="Logo ISMRM"
+        style="max-width: 300px; height: auto;"
+      />
+    </p>
+
     <h1>¡Bienvenidos al Repositorio del Capítulo Latinoamericano de la ISMRM (ISMRM-LATAM)!</h1>
 
     <p>
