--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <title>ISMRM-LATAM</title>
   </head>
   <body>
-    <!-- Imagen en la parte superior -->
-    <p>
+    <!-- 1. Logo centrado -->
+    <p style="text-align: center;">
       <img
         src="Logo_ismrm.webp"
         alt="Logo ISMRM"
-        style="max-width: 300px; height: auto;"
+        style="max-width: 500px; height: auto;"
       />
     </p>
 
-    <h1>¡Bienvenidos al Repositorio del Capítulo Latinoamericano de la ISMRM (ISMRM-LATAM)!</h1>
+    <!-- 2. Título con "Capítulo Latinoamericano" enlazado -->
+    <h1>
+      ¡Bienvenidos al Repositorio del
+      <a href="https://www.ismrm-latam.org/" target="_blank">
+        Capítulo Latinoamericano
+      </a>
+      de la ISMRM (ISMRM-LATAM)!
+    </h1>
 
     <p>
       Hemos dado de alta este repositorio con el fin de compilar todos los proyectos y repositorios disponibles por nuestros miembros y con una breve descripción en español.
