--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <!-- 2. Título con "Capítulo Latinoamericano" enlazado -->
     <h1>
-      ¡Bienvenidos al Repositorio del
+      ¡Bienvenidos al Repositorio del Capítulo Latinoamericano  de la ISMRM
       <a href="https://www.ismrm-latam.org/" target="_blank">
-        Capítulo Latinoamericano
+      (ISMRM-LATAM)  
       </a>
-      de la ISMRM (ISMRM-LATAM)!
+      !
     </h1>
 
     <p>
