--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 
     <!-- 2. Título con "Capítulo Latinoamericano" enlazado -->
     <h1>
-      ¡Bienvenidos al Repositorio del Capítulo Latinoamericano  de la ISMRM
-      <a href="https://www.ismrm-latam.org/" target="_blank">
-      (ISMRM-LATAM)  
-      </a>
-      !
+      ¡Bienvenidos al Repositorio del Capítulo Latinoamericano  de la ISMRM (
+      <a href="https://www.ismrm-latam.org/" target="_blank">ISMRM-LATAM  
+      </a>)!
     </h1>
 
     <p>
